# Velocity-estimator

./: LICENSE
costmap_layer/: CMakeLists.txt  costmap_plugin.xml  package.xml
costmap_layer/include/costmap_layer/: custom_layer.h
costmap_layer/src/: custom_layer.cpp  layer.py
models_plugins/: CMakeLists.txt  package.xml
models_plugins/launch/: launch.launch
models_plugins/src/: forward.cc
models_plugins/world/: test_world.world
obstacle_velocity/: CMakeLists.txt  package.xml
obstacle_velocity/GUI/: speed.ui
obstacle_velocity/cfg/: converter_params.yaml  dynamique_plugin.yaml
obstacle_velocity/csv/: data.csv
obstacle_velocity/include/obstacle_velocity/: obstacle_velocity.h
obstacle_velocity/launch/: obstacle_velocity.launch
obstacle_velocity/msg/: obstacle.msg  obstacles_msgs.msg
obstacle_velocity/scripts/: world_extre.py
obstacle_velocity/src/: Data_filter.cpp  centroidtracker.py  data_filter.py  obstacle_velocity.cpp  obstacles_sub.py  static_obs_finder.py  tester.py  velocity.py
obstacle_velocity/srv/: map_converter.srv
