<?xml version="1.0"?>
<package format="2">
  <name>obstacle_velocity</name>
  <version>0.0.0</version>
  <description>The obstacle_velocity package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kraiem@todo.todo">kraiem</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_export_depend>roscpp</build_export_depend>
<exec_depend>roscpp</exec_depend>
<build_depend>geometry_msgs</build_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<exec_depend>geometry_msgs</exec_depend>
<build_depend>std_msgs</build_depend>
<build_export_depend>std_msgs</build_export_depend>
<exec_depend>std_msgs</exec_depend>
<build_depend>visualization_msgs</build_depend>
<build_export_depend>visualization_msgs</build_export_depend>
<exec_depend>visualization_msgs</exec_depend>
<build_depend>teb_local_planner</build_depend>
<build_export_depend>teb_local_planner</build_export_depend>
<exec_depend>teb_local_planner</exec_depend>
<build_depend>tf2</build_depend>
<build_export_depend>tf2</build_export_depend>
<exec_depend>tf2</exec_depend>
<build_depend>message_generation</build_depend>
<exec_depend>message_runtime</exec_depend>

<export>
<!--  Other tools can request additional information be placed here  -->
</export>
</package>